[package]
name = "const-c-str"
version = "0.1.1"
authors = ["Erlend Tobiassen <erlend.tobiassen@gmail.com>"]
description = "Safely create &CStr at compile time"
repository = "https://github.com/regiontog/const-c-str"
documentation = "https://docs.rs/const-c-str/0.1.0/const_c_str/"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
edition = "2018"

[dependencies]
proc-macro-hack = "0.5"
const-c-str-impl = { version = "0.1.0", path = "../const-c-str-impl" }